@@ -3,6 +3,7 @@ package pl.user.user_notification.notification;
 import pl.user.user_notification.notification.notification.Notification;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.Map;
 
 import static pl.tool.RandomUtils.randomString;
@@ -12,7 +13,7 @@ public class NotificationRandomTool {
       return Notification.builder()
          .tittle(randomString())
          .dateOfAdding(LocalDateTime.now())
-         .items(Map.of(randomString(), randomString(), randomString(), randomString()))
+         .items(Collections.singletonMap(randomString(), randomString()))
          .build();
    }
 
